--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,5 @@ platform = espressif32
 board = lolin32
 framework = arduino
 monitor_speed = 921600
-lib_deps = arduino-libraries/ArduinoBLE@^1.3.7
+lib_deps = 
+	arduino-libraries/ArduinoBLE@^1.3.7
